--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="jumbotron">
         <div class="container">
 
-            <div class="card">
+            <div class="card shadow-lg">
                 <div class="row no-gutters">
                   <div class="col-md-4">
                     <img src="images/profile.JPG" class="card-img img-fluid" alt="Profile">
@@ -36,7 +36,7 @@
 
     <div class="container">
 
-        <div class="row">
+        <div class="row shadow-lg pt-3 mb-5">
 
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                 <div class="card border-dark mb-3" >
