--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                   <div class="col-md-8">
                     <div class="card-body">
                         <h3 class="card-title">Philip Namugera Bbaale</h3>
+                        <h5><a href="mailto:namugera.philip@gmail.com">namugera.philip@gmail.com</a></h5>
                         <hr class="bg-secondary">
                         <p class="card-text mt-2">Philip is an upcoming Software Engeneer who has been coding professionaly since 2018.<br>
                             He finished his O'level highschool at <a href="http://www.lightacademy.ac.ug/" target="_blank">Light Academy</a>, enroled for a profesional software engneering cource at
